<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewJelentesActivity">

    <TextView
        android:id="@+id/textViewUjJelentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        android:text="@string/ujJelentesHozzaad"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextIdentifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUjJelentes"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="15"
        android:fontFamily="sans-serif"
        android:hint="@string/identi"
        android:inputType="text"
        android:padding="15dp" />
    <TextView
        android:id="@+id/textViewMinta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextIdentifier"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        android:text="Minta típusa"
        android:textAlignment="center"
        android:textSize="18sp" />


    <RadioGroup
        android:id="@+id/radioGroupMinta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/textViewMinta">

        <RadioButton
            android:id="@+id/verRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="vér"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="vizelet"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="széklet"/>


    </RadioGroup>

    <EditText
        android:id="@+id/editTextFertozes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupMinta"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/fertozesTipusai"
        android:inputType="text"
        android:padding="15dp" />

    <EditText
        android:id="@+id/editTextPaciensName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFertozes"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/paciensNeve"
        android:inputType="text"
        android:padding="15dp" />

    <EditText
        android:id="@+id/editTextConclusion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPaciensName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:maxLines="3"
        android:hint="@string/conclusion"
        android:inputType="textMultiLine|text"
        android:padding="15dp" />

    <LinearLayout
        android:id="@+id/layoutLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/editTextConclusion"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">



        <Button
            android:id="@+id/mentesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextConclusion"
            android:layout_marginStart="30dp"
            android:layout_marginTop="9dp"
            android:onClick="jelentesMentes"
            android:text="@string/mentesGomb" />

        <Button
            android:id="@+id/kezdooldalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextConclusion"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="9dp"
            android:onClick="veg"
            android:text="@string/visszaGomb" />

    </LinearLayout>


</RelativeLayout>